[tool.poetry]
name = "rainyuncap"
version = "0.1.0"
description = ""
authors = ["hsn <hsn1919810@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
playwright = "^1.49.1"
requests = "^2.32.3"
opencv-python = "^4.10.0.84"
httpx = "^0.28.1"
fastapi = "^0.115.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
