[tool.poetry]
name = "rcap"
version = "0.2.0"
description = ""
authors = ["hsn <hsn1919810@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
playwright = "^1.49.1"
requests = "^2.32.3"
opencv-python = "^4.10.0.84"
httpx = "^0.28.1"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
pysocks = "^1.7.1"
loguru = "^0.7.3"


[[tool.poetry.source]]
name = "mirrors"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
priority = "primary"


[tool.poetry.group.dev.dependencies]
invoke = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
